<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100" >

            <ImageView
                android:id="@+id/stripe"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:adjustViewBounds="true"
                android:background="@color/unknown"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/color_stripe"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:layout_weight="95"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:text="@string/station_name"
                    android:textColor="@color/station_name"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="5dip"
                    android:weightSum="100" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/river"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:gravity="start"
                                android:maxLines="3"
                                android:text="@string/river"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/river_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/no_value"
                                android:textSize="16sp"
                                android:textColor="@color/values" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/water_level"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:gravity="start"
                                android:maxLines="3"
                                android:text="@string/water_level"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/water_level_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/no_value"
                                android:textSize="16sp"
                                android:textColor="@color/values" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/reading_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:gravity="start"
                                android:maxLines="3"
                                android:text="@string/reading_time"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/reading_time_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/no_value"
                                android:textSize="16sp"
                                android:textColor="@color/values" />
                        </LinearLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/status_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dip"
                        android:contentDescription="@string/status_icon"
                        android:src="@drawable/unknown" />
                </RelativeLayout>

                <View
                    android:id="@+id/line_view"
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_marginBottom="5dip"
                    android:layout_marginTop="5dip"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/danger_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dip"
                        android:gravity="start"
                        android:maxLines="3"
                        android:text="@string/danger_level"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/danger_level_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_value"
                        android:textSize="16sp"
                        android:textColor="@color/values" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/warning_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="10dip"
                        android:gravity="start"
                        android:maxLines="3"
                        android:text="@string/warning_level"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/warning_level_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/no_value"
                        android:textSize="16sp"
                        android:textColor="@color/values" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>